--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 
 # Jupyter notebook checkpoints
-notebook/.ipynb_checkpoints/
+.ipynb_checkpoints/
 
 # Editor generated files
 .idea/
